@@ -1,5 +1,5 @@
 /*
-** Copyright (C) 1991, 1997-2000 Free Software Foundation, Inc.
+** Copyright (C) 1991, 1997-2000,2012 Free Software Foundation, Inc.
 **
 ** This file is part of TACK.
 **
@@ -21,7 +21,7 @@
 
 #include <tack.h>
 
-MODULE_ID("$Id: charset.c,v 1.14 2012/04/29 00:14:39 tom Exp $")
+MODULE_ID("$Id: charset.c,v 1.15 2012/04/29 00:14:39 tom Exp $")
 
 /*
 	Menu definitions for alternate character set and SGR tests.
