@@ -1,3 +1,7 @@
+2013-02-10  Thomas E. Dickey  <dickey@invisible-island.net>
+
+	* config.sub, config.guess: update to 2013-02-04
+
 2012-09-16  Thomas E. Dickey  <dickey@invisible-island.net>
 
 	* configure, configure.in:
